# gst-qrinfo

./: AUTHORS  README.md  configure.ac
src/: Makefile.am  gstqr.c  gstqr.h
